<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.xvjialing.administrator.talentpool.ac.ActivityMain">

    <LinearLayout
        android:id="@+id/ll_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="3dp">

        <RelativeLayout
            android:id="@+id/rl_bottom_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_bottom_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_bottom_home"
                    style="@style/main_bottom_img"
                    android:src="@drawable/bottom_home_selector"/>

                <TextView
                    android:id="@+id/tv_bottom_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bottom_connection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_bottom_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_bottom_connection"
                    style="@style/main_bottom_img"
                    android:src="@drawable/bottom_connection_selector"/>

                <TextView
                    android:id="@+id/tv_bottom_connection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connection"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="10sp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bottom_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_bottom_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_bottom_message"
                    style="@style/main_bottom_img"
                    android:src="@drawable/bottom_message_selector"/>

                <TextView
                    android:id="@+id/tv_bottom_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bottom_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_bottom_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_bottom_me"
                    style="@style/main_bottom_img"
                    android:src="@drawable/bottom_me_selector"/>

                <TextView
                    android:id="@+id/tv_bottom_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/main_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/ll_main_bottom"
        android:background="@color/divider"/>
    <FrameLayout
        android:id="@+id/fl_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_divider"></FrameLayout>


</RelativeLayout>
